--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+
+  <!-- SEO -->
+  <meta name="description" content="Official portfolio of Jyothish J, Mechanical Engineering student at IIT Hyderabad. Exploring web development, robotics, automation, relativity, and creative technology." />
+  <meta name="keywords" content="Jyothish J, IIT Hyderabad, Web Developer, Portfolio, Robotics, Automation, Mechanical Engineering, Student Engineer, Astronomy, Relativity, Coding, Creativity" />
+  <meta name="author" content="Jyothish J" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph (Social Sharing) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Jyothish J | Portfolio" />
+  <meta property="og:description" content="Student at IIT Hyderabad | Web Development, Robotics, Automation & more." />
+  <meta property="og:image" content="https://portfolio-of-jyothish.vercel.app/assets/preview.jpg" />
+  <meta property="og:url" content="https://portfolio-of-jyothish.vercel.app" />
+  <meta property="og:site_name" content="Jyothish J Portfolio" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Jyothish J | Portfolio" />
+  <meta name="twitter:description" content="Mechanical Engineering @ IIT-H | Web Dev, Robotics, and Relativity Explorer." />
+  <meta name="twitter:image" content="https://portfolio-of-jyothish.vercel.app/assets/preview.jpg" />
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!--CSS-->
