--- a/pages/activities.html
+++ b/pages/activities.html
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-gradient">Robotic Car</h5>
                     <p class="card-text">
-                        I have made robotic car with DC motors using Arduino UNO.
+                        I have made a robotic car with DC motors using Arduino UNO.
                         It was modified to be controlled by a mobile app, by an accelerometer sensor and by voice control.
                         Later utilised IR sensor module to build Black liner follower bot, object repeller and avoider bot and light follower and repeller bot.
                     </p>
