--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- SEO -->
   <meta name="description" content="Official portfolio of Jyothish J, Mechanical Engineering student at IIT Hyderabad. Exploring web development, robotics, automation, relativity, and creative technology." />
-  <meta name="keywords" content="Jyothish J, IIT Hyderabad, Web Developer, Portfolio, Robotics, Automation, Mechanical Engineering, Student Engineer, Astronomy, Relativity, Coding, Creativity" />
+  <meta name="keywords" content="Jyothish J,Jyothish iith, Jyothish, jyothish j, jyothish iith , IIT Hyderabad, Web Developer, Portfolio, Robotics, Automation, Mechanical Engineering, Student Engineer, Astronomy, Relativity, Coding, Creativity" />
   <meta name="author" content="Jyothish J" />
   <meta name="robots" content="index, follow" />
 
