--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="assets/favicon.png" type="image/x-icon" />
+     <link rel="icon" href="./favicon.png" type="image/x-icon" />
 
   <!-- SEO -->
   <meta name="description" content="Official portfolio of Jyothish J, Mechanical Engineering student at IIT Hyderabad. Exploring web development, robotics, automation, relativity, and creative technology." />
