--- a/pages/activities.html
+++ b/pages/activities.html
@@ -55,6 +55,24 @@
     <div class="card mb-3 col-12" >
         <div class="row g-0">
             <div class="col-md-4">
+            <img src="../assets/8bitComputer.jpg" class="activity-image img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-gradient">8-bit Computer From Scratch</h5>
+                    <p class="card-text">
+                        I have built a programmable 8-bit SAP-1 computer from scratch on a breadboard capable of running arithmetic and logic programs like Fibonacci and Pascal’s triangle etc.
+                        With custom ALU, control unit, RAM, and an added Arduino-based interpreter, the system demonstrates full low-level computation. 
+                    </p>
+                    <p class="card-text"><small class="text-body-secondary">July 2025</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+     <!--card-->
+    <div class="card mb-3 col-12" >
+        <div class="row g-0">
+            <div class="col-md-4">
             <img src="../assets/roboticCarActivity.jpg" class="activity-image img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
