--- a/pages/activities.html
+++ b/pages/activities.html
@@ -55,6 +55,58 @@
     <div class="card mb-3 col-12" >
         <div class="row g-0">
             <div class="col-md-4">
+            <img src="../assets/cycleLock.png" class="activity-image img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-gradient">Bicycle Theft Protection System</h5>
+                    <p class="card-text">
+                        I have worked in a team to design and built a bicycle theft protection system. I have specifically taken care of the ideation,hardware parts assembly, signal transmission, arduino programming and mobile app creation part of the project. It was a great learning opportunity working with accelerometer sensors, bluetooth modules, mosfets and other electronics.
+                    </p>
+                    <p class="card-text"><small class="text-body-secondary">Oct 2025</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--card-->
+    <div class="card mb-3 col-12" >
+        <div class="row g-0">
+            <div class="col-md-4">
+            <img src="../assets/astronomy101.png" class="activity-image img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-gradient">Astronomy 101 Session</h5>
+                    <p class="card-text">
+                        I gave a lecture providing an introduction to the field of Astronomy for the IIT Hyderabad Audience.The session was conducted as a part of Cepheid, the Astronomy club of IIT Hyderabad.
+                    </p>
+                    <p class="card-text"><small class="text-body-secondary">Sept 2025</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!--card-->
+    <div class="card mb-3 col-12" >
+        <div class="row g-0">
+            <div class="col-md-4">
+            <img src="../assets/motiveHackathon.png" class="activity-image img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-gradient">Motive Hackathon</h5>
+                    <p class="card-text">
+                        I participated in the Motiverse Hackathon conducted by Motive at IIT Hyderabad. I worked with my pair to built a system to search through a video database and return the top k results. It was a great opportunity to apply my Python Programming and Prompt Engineering skills. We made use of vector embeddings and semantic searching to present a working system.
+                    </p>
+                    <p class="card-text"><small class="text-body-secondary">Aug 2025</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+     <!--card-->
+    <div class="card mb-3 col-12" >
+        <div class="row g-0">
+            <div class="col-md-4">
             <img src="../assets/8bitComputer.jpg" class="activity-image img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
@@ -172,4 +224,5 @@
 <!--Bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>    
 </body>
+
 </html>
